# tractian_integrations_engineering_technical_test_gustavo_domingues

./: README.md  pyproject.toml
src/: main.py
src/core/: customer_handler.py  tracos_handler.py  translator.py
src/processors/: inbound_processor.py  outbound_processor.py
tests/: customer_handler_test.py  end_to_end_flow_test.py  tracos_handler_test.py  translator_test.py
